[package]
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface with the AHT20 temperature/humidity sensors"
documentation = "https://github.com/chocol4te/aht20"
keywords = ["embedded-hal-driver", "temperature", "humidity", "aht20"]
license = "AGPL-3.0-or-later"
name = "aht20"
repository = "https://github.com/chocol4te/aht20"
version = "0.1.0"
edition = "2018"

[dependencies]
embassy-time = { version = "0.1.5", features = ["nightly"] }
bitflags = "2"
crc = "3"
postcard = { version = "1", features = ["postcard-derive", "experimental-derive"] }
serde = { version = "1", default-features = false, features = ["derive"] }
embedded-hal-async = { version = "1.0.0-rc.1" }
thiserror = { version = "1", package = "thiserror-core", default-features = false }
